@@ -875,7 +875,7 @@ keyvalue_map(args) = 1 2 3 4 5</programlisting>
              into the configuration, but it can be used in any script. 
          </para>
          <para>
-             <command>::rivet::inspect</command> can be called in three forms
+             <command>::rivet::inspect</command> can be called in 4 different forms
          </para>
          <itemizedlist mark="square">
          
@@ -884,23 +884,44 @@ keyvalue_map(args) = 1 2 3 4 5</programlisting>
                keys: server, dir, user. Each key is associated to a subdictionary 
                carrying the configuration as set for that request.  In this form the command is 
                meant to support compatibility with previous versions of mod_rivet 
-               where three global arrays RivetServerConf, 
-               RivetDirConf and RivetUserConf were created to be internally used by command
-               <command>::rivet::debug</command>
+               where three global array RivetUserConf was created to be internally used by command
+               <command>::rivet::debug</command>.
             </listitem>
 			
-			<listitem>
-				With the <arg>-all</arg> argument the switch a dictionary
-				carrying the whole configuration for that specific request is returned. 
-				When a configuration parameter is not set it's given the
-				string <emphasis>undefined</emphasis>
-			</listitem> 
+				<listitem>
+					With the <arg>-all</arg> argument a dictionary
+					carrying the whole configuration for that specific request is returned. 
+					If a configuration parameter is not set it's given the
+					string <emphasis>undefined</emphasis>. Returned configuration paramenters
+					are<programlisting>    "ServerInitScript",
+    "GlobalInitScript",
+    "ChildInitScript",
+    "ChildExitScript",
+    "BeforeScript",
+    "AfterScript",
+    "AfterEveryScript",
+    "AbortScript",
+    "ErrorScript",
+    "UploadMaxSize",
+    "UploadDirectory",
+    "UploadFilesToVar",
+    "SeparateVirtualInterps",
+    "HonorHeaderOnlyRequests"</programlisting>
+				</listitem> 
 			
-	    	<listitem>
-				With one argument (one of the Rivet configuration directives) 
-				<command>::rivet::inspect</command> returns the current value
-				in the configuration record
-			</listitem>
+		    	<listitem>
+					With one argument (one of the Rivet configuration directives listed above) 
+					<command>::rivet::inspect</command> returns the current value
+					in the configuration record. 
+				</listitem>
+				<listitem>
+					Passing the argument "script" <command>::rivet::inspect</command>
+					returns a path to the current script in a similar way 
+					core command <command>[info script]</command> does. The basic
+					difference is that the core command returns a relative path with
+					respect to the current working directory, whereas mod_rivet's command
+					returns the full path.
+				</listitem>
 
          </itemizedlist>
 	    </refsect1>
