@@ -284,6 +284,7 @@ namespace eval ::DIO {
                             dict set where_expr $condition_count predicate $elem
 
                         }
+
                     }
                     set parser_st state0
                 }
